--- a/commit/action.yml
+++ b/commit/action.yml
@@ -5,6 +5,9 @@ branding:
   icon: 'git-commit'
   color: 'green'
 inputs: 
+  github_token:
+    description: 'Github Token with commit access'
+    requried: true
   push_branch:
     description: 'Override branch to push to'
     requried: false
